--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,16 +1,23 @@
-name: Waka Readme
+name: WakaTime Stats Updater
 
 on:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+    - cron: '30 18 * * *'  # UTC时间18:30 (IST午夜12点)
   workflow_dispatch:
+
 jobs:
-  update-readme:
-    name: Update Readme with Metrics
+  update-stats:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # 必须授予写入权限
+    
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: anmol098/waka-readme-stats@v2.0.5  # 使用固定版本
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用内置Token更安全
+          SHOW_OS: "true"  # 显示操作系统
+          SHOW_PROJECTS: "false"  # 隐藏项目名称
+          SHOW_EDITORS: "true"  # 显示编辑器
+          LOCALE: "zh_CN"  # 中文显示
+          # README_PATH: "./path/to/README.md"  # 非根目录时需要
