--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: anmol098/waka-readme-stats@master  # 使用固定版本
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用内置Token更安全
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # 使用内置Token更安全
           SHOW_OS: "true"  # 显示操作系统
           SHOW_PROJECTS: "false"  # 隐藏项目名称
           SHOW_EDITORS: "true"  # 显示编辑器
